--- a/index.html
+++ b/index.html
@@ -1,111 +1,119 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-   <meta name="author"             content="James M Arama" />
-   <link rel="stylesheet" href="jambOS.css" type="text/css" media="screen" />
-   <title>
-      JambOS - a Browser-based virtual Operating System
-   </title>
-   
-   <script type="text/javascript" src="scripts/libs/jquery-1.10.2.min.js"></script>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+        <meta name="author"             content="James M Arama" />
+        <link rel="stylesheet" href="assets/styles/bootstrap.min.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="assets/styles/bootstrap-responsive.min.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="assets/styles/jambOS.css" type="text/css" media="screen" />
+        <title>
+            JambOS - a Browser-based virtual Operating System
+        </title>
 
-   <!-- Globals CONSTANTS and _Variables. Must included be first. -->
-   <script type="text/javascript" src="globals.js"></script>	
+        <script type="text/javascript" src="assets/scripts/libs/jquery-1.10.2.min.js"></script>
+        <script type="text/javascript" src="assets/scripts/libs/jquery.lionbars.0.3.js"></script>
 
-   <!-- Host (Hardware Simulation) Routines -->
-   <script type="text/javascript" src="scripts/host/control.js"></script>
-   <script type="text/javascript" src="scripts/host/devices.js"></script>
-   <script type="text/javascript" src="scripts/host/cpu.js"></script>
+        <!-- Globals CONSTANTS and _Variables. Must included be first. -->
+        <script type="text/javascript" src="assets/scripts/globals.js"></script>	
 
-   <!-- Virtual OS Routines: Make sure Kernel code is last, since it needs those above it. -->
-   <script type="text/javascript" src="scripts/os/interrupt.js"></script>
-   <script type="text/javascript" src="scripts/os/canvastext.js"></script>	
-   <script type="text/javascript" src="scripts/os/console.js"></script>	
-   <script type="text/javascript" src="scripts/os/deviceDriver.js"></script>
-   <script type="text/javascript" src="scripts/os/deviceDriverKeyboard.js"></script>
-   <script type="text/javascript" src="scripts/os/queue.js"></script>
-   <script type="text/javascript" src="scripts/os/shell.js"></script>
-   <script type="text/javascript" src="scripts/os/kernel.js"></script>
+        <!-- Host (Hardware Simulation) Routines -->
+        <script type="text/javascript" src="assets/scripts/host/control.js"></script>
+        <script type="text/javascript" src="assets/scripts/host/devices.js"></script>
+        <script type="text/javascript" src="assets/scripts/host/cpu.js"></script>
 
-   <!-- Other Routines -->
-   <script type="text/javascript" src="scripts/utils.js"></script>
-   <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>
-</head>
+        <!-- Virtual OS Routines: Make sure Kernel code is last, since it needs those above it. -->
+        <script type="text/javascript" src="assets/scripts/os/interrupt.js"></script>
+        <script type="text/javascript" src="assets/scripts/os/canvastext.js"></script>	
+        <script type="text/javascript" src="assets/scripts/os/console.js"></script>	
+        <script type="text/javascript" src="assets/scripts/os/deviceDriver.js"></script>
+        <script type="text/javascript" src="assets/scripts/os/deviceDriverKeyboard.js"></script>
+        <script type="text/javascript" src="assets/scripts/os/queue.js"></script>
+        <script type="text/javascript" src="assets/scripts/os/shell.js"></script>
+        <script type="text/javascript" src="assets/scripts/os/kernel.js"></script>
 
-<body onload="hostInit();">
+        <!-- Other Routines -->
+        <script type="text/javascript" src="assets/scripts/utils.js"></script>
+        <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>   
+    </head>
 
-<div id="divMain" style="width:100%;">
+    <body onload="hostInit();">
 
-   <div id="divButtonBar" style="margin:4px;">
-      <input type="button"
-             id = "btnStartOS"
-             name="brnStartOS"
-             class="normal_button"
-             value="Start"
-             tabindex="0"
-             onclick="hostBtnStartOS_click(this);">
+        <div id="divMain">
+            <div class="container">
+                <h1>JambOS</h1>
+                <div id="divButtonBar" style="margin:4px;">
+                    <input type="button"
+                           id = "btnStartOS"
+                           name="brnStartOS"
+                           class="normal_button btn btn-default"
+                           value="Start"
+                           tabindex="0"
+                           onclick="hostBtnStartOS_click(this);">
 
-      <input type="button"
-             id = "btnHaltOS"
-             name="brnHaltOS"
-             class="normal_button"
-             disabled="disabled"
-             value="Halt"
-             tabindex="1"
-             onclick="hostBtnHaltOS_click(this);">
+                    <input type="button"
+                           id = "btnHaltOS"
+                           name="brnHaltOS"
+                           class="normal_button btn btn-default"
+                           disabled="disabled"
+                           value="Halt"
+                           tabindex="1"
+                           onclick="hostBtnHaltOS_click(this);">
 
-      <input type="button"
-             id = "btnReset"
-             name="brnReset"
-             class="normal_button"
-             disabled="disabled"
-             value="Reset"
-             tabindex="2"
-             onclick="hostBtnReset_click(this);">
-   </div>
+                    <input type="button"
+                           id = "btnReset"
+                           name="brnReset"
+                           class="normal_button btn btn-default"
+                           disabled="disabled"
+                           value="Reset"
+                           tabindex="2"
+                           onclick="hostBtnReset_click(this);">
+                </div>
 
-   <div id="divConsole" style="margin:4px; width:500px; height:500px; float:left;">
-      <canvas id="display"
-              width="500px"
-              height="500px"
-              tabindex="3">
-      </canvas>
-   </div>
+                <div class="row-fluid">
 
-   <div id="divLog" style="margin-left:520px;">
-      <label>
-         Log
-         <br>
-         <textarea name="taLog"
-                   id  ="taLog"
-                   rows="26"
-                   cols="48"
-         ></textarea>
-      </label>
-   </div>
+                    <div id="divConsole" style="height:500px; float:left;" class="span6 pull-left">
+                        <canvas id="display"
+                                width="480px"
+                                height="480px"
+                                tabindex="3">
+                        </canvas>
+                    </div>
+                    <div class="span6 pull-left">
 
-   <div id="divUserProgramInput" style="margin-left:520px;">
-      <label>
-         User Program Input
-         <br>
-         <textarea name="taProgramInput"
-                   id  ="taProgramInput"
-                   rows="8"
-                   cols="48"
-         ></textarea>
-      </label>
-   </div>
+                        <div id="divLog">
+                            <label>
+                                Log
+                            </label>
+                            <br />
+                            <textarea name="taLog"
+                                      id  ="taLog"
+                                      rows="15"
+                                      ></textarea>
+                        </div>
 
-</div>
+                        <div id="divUserProgramInput">
+                            <label>
+                                User Program Input
+                            </label>
+                            <br />
+                            <textarea name="taProgramInput"
+                                      id  ="taProgramInput"
+                                      rows="5"
+                                      ></textarea>
+                        </div>
+                    </div>
+                </div>
 
-<p class="footerText" style="clear:both;">
-   <br>
-   Copyright &copy; 2008 - 2013 No Rights Reserved.
-   <br>
-   Reproduction is prohibited without the express written consent of
-   Ted Codd, Stevie Ray Vaughan, and Ian Fleming.
-</p>
+            </div>
 
-</body>
+            <p class="footerText" style="clear:both;">
+                <br>
+                Copyright &copy; 2008 - 2013 No Rights Reserved.
+                <br>
+                Reproduction is prohibited without the express written consent of
+                Ted Codd, Stevie Ray Vaughan, and Ian Fleming.
+            </p>
+        </div>
+
+    </body>
 </html>
