Re-writing code

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>   
     </head>
 
-    <body onload="hostInit();">
+    <body>
 
         <div id="divMain">
             <div class="container">
@@ -46,8 +46,7 @@
                            name="brnStartOS"
                            class="normal_button btn btn-default"
                            value="Start"
-                           tabindex="0"
-                           onclick="hostBtnStartOS_click(this);">
+                           tabindex="0">
 
                     <input type="button"
                            id = "btnHaltOS"
@@ -55,8 +54,7 @@
                            class="normal_button btn btn-default"
                            disabled="disabled"
                            value="Halt"
-                           tabindex="1"
-                           onclick="hostBtnHaltOS_click(this);">
+                           tabindex="1">
 
                     <input type="button"
                            id = "btnReset"
@@ -64,8 +62,7 @@
                            class="normal_button btn btn-default"
                            disabled="disabled"
                            value="Reset"
-                           tabindex="2"
-                           onclick="hostBtnReset_click(this);">
+                           tabindex="2">
                 </div>
 
                 <div class="row-fluid">
