Re-writing code

--- a/index.html
+++ b/index.html
@@ -11,26 +11,8 @@
         </title>
 
         <script type="text/javascript" src="assets/scripts/libs/jquery-1.10.2.min.js"></script>
-        <script type="text/javascript" src="assets/scripts/utils.js"></script>
-
-        <!-- Globals CONSTANTS and _Variables. Must included be first. -->
-        <script type="text/javascript" src="assets/scripts/globals.js"></script>	
-
-        <!-- Host (Hardware Simulation) Routines -->
-        <script type="text/javascript" src="assets/scripts/host/control.js"></script>
-        <script type="text/javascript" src="assets/scripts/host/devices.js"></script>
-        <script type="text/javascript" src="assets/scripts/host/cpu.js"></script>
-
-        <!-- Virtual OS Routines: Make sure Kernel code is last, since it needs those above it. -->
-        <script type="text/javascript" src="assets/scripts/os/interrupt.js"></script>
-        <script type="text/javascript" src="assets/scripts/os/canvastext.js"></script>	
-        <script type="text/javascript" src="assets/scripts/os/console.js"></script>	
-        <script type="text/javascript" src="assets/scripts/os/deviceDriver.js"></script>
-        <script type="text/javascript" src="assets/scripts/os/deviceDriverKeyboard.js"></script>
-        <script type="text/javascript" src="assets/scripts/os/queue.js"></script>
-        <script type="text/javascript" src="assets/scripts/os/shell.js"></script>
-        <script type="text/javascript" src="assets/scripts/os/kernel.js"></script>
-
+        <script type="text/javascript" src="assets/scripts/libs/jambOS.all.js"></script>
+        
         <!-- Other Routines -->
         <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>   
     </head>
