--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="divMain">
             <div class="container">
                 <h1>JambOS</h1>
-                <div id="divButtonBar" style="margin:4px;">
+                <div id="divButtonBar">
                     <button type="button"
                            id = "btnStartOS"
                            name="brnStartOS"
@@ -41,7 +41,7 @@
                     <button type="button"
                            id = "btnReset"
                            name="brnReset"
-                           class="normal_button btn btn-danger"
+                           class="normal_button btn btn-danger pull-right"
                            disabled="disabled"
                            title="reset"
                            tabindex="2"><span class="glyphicon glyphicon-off"></span></button>
