Recommit of my repo after accidentally deleting it from netbeans. Also got my stepover functionality working. Just need to clean up a bit of my logic since my results are ending up to be: 1,2,DDONE

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                             class="normal_button btn btn-default"
                             title="start"
                             tabindex="0"><span class="glyphicon glyphicon-play"></span></button>
+                    <button type="button"
+                            id = "btnStepOver"
+                            name="brnStartOS"
+                            class="normal_button btn btn-default"
+                            title="start"
+                            tabindex="0"><span class="glyphicon glyphicon-chevron-right"></span></button>
 
                     <button type="button"
                             id = "btnHaltOS"
