Added PCB status display for running process

--- a/index.html
+++ b/index.html
@@ -84,28 +84,54 @@
                             <div class="card content"></div>
 
                         </div>
-                        
+
                         <div id="cpuStatus">
                             <label>CPU Status</label>
                             <div class="card content">
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th>PC</th>
-                                        <th>ACC</th>
-                                        <th>X Register</th>
-                                        <th>Y Register</th>
-                                        <th>Z Flag</th>
-                                    </tr>
-                                    <tr>
-                                        <td class="pc">0</td>
-                                        <td class="acc">0</td>
-                                        <td class="x-register">0</td>
-                                        <td class="y-register">0</td>
-                                        <td class="z-flag">0</td>
-                                    </tr>
-                                </thead>
-                            </table>
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>PC</th>
+                                            <th>ACC</th>
+                                            <th>X Register</th>
+                                            <th>Y Register</th>
+                                            <th>Z Flag</th>
+                                        </tr>
+                                        <tr>
+                                            <td class="pc">0</td>
+                                            <td class="acc">0</td>
+                                            <td class="x-register">0</td>
+                                            <td class="y-register">0</td>
+                                            <td class="z-flag">0</td>
+                                        </tr>
+                                    </thead>
+                                </table>
+                            </div>
+                        </div>
+
+                        <div id="pcbStatus">
+                            <label>PCB Status</label>
+                            <div class="card content">
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>PID</th>
+                                            <th>PC</th>
+                                            <th>ACC</th>
+                                            <th>X Register</th>
+                                            <th>Y Register</th>
+                                            <th>Z Flag</th>
+                                        </tr>
+                                        <tr>
+                                            <td class="pid">0</td>
+                                            <td class="pc">0</td>
+                                            <td class="acc">0</td>
+                                            <td class="x-register">0</td>
+                                            <td class="y-register">0</td>
+                                            <td class="z-flag">0</td>
+                                        </tr>
+                                    </thead>
+                                </table>
                             </div>
                         </div>
 
