--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         </title>
 
         <script type="text/javascript" src="assets/scripts/libs/jquery-1.10.2.min.js"></script>
-        <script type="text/javascript" src="assets/scripts/libs/jambOS.all.min.js"></script>
+        <script type="text/javascript" src="assets/scripts/libs/jambOS.all.js"></script>
 
         <!-- Other Routines -->
-        <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>   
+        <!--<script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>-->   
     </head>
     <body>
         <div id="divMain">
