--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
         <title>
             JambOS - a Browser-based virtual Operating System
         </title>
-
-        <script type="text/javascript" src="assets/scripts/libs/jquery-1.10.2.min.js"></script>
-        <script type="text/javascript" src="assets/scripts/libs/jambOS.all.js"></script>
-
-        <!-- Other Routines -->
-        <!--<script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>-->   
     </head>
     <body>
         <div id="divMain">
@@ -61,8 +55,7 @@
                             <canvas id="display"
                                     width="500px"
                                     height="480px"
-                                    tabindex="3">
-                            </canvas>
+                                    tabindex="3" />
                         </div>
                     </div>
                     <div class="span6 pull-left">
@@ -85,55 +78,69 @@
 
                         </div>
 
-                        <div id="cpuStatus">
-                            <label>CPU Status</label>
-                            <div class="card content">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>PC</th>
-                                            <th>ACC</th>
-                                            <th>X Register</th>
-                                            <th>Y Register</th>
-                                            <th>Z Flag</th>
-                                        </tr>
-                                        <tr>
-                                            <td class="pc">0</td>
-                                            <td class="acc">0</td>
-                                            <td class="x-register">0</td>
-                                            <td class="y-register">0</td>
-                                            <td class="z-flag">0</td>
-                                        </tr>
-                                    </thead>
-                                </table>
+                        <div class="clearfix"></div>
+
+                        <!-- Register Analysis -->
+                        <div id="registerAnalysis">
+
+                            <ul class="nav nav-tabs" id="analysisTabs">
+                                <li class="active"><a href="#pcbStatus">Process Results</a></li>
+                                <li><a href="#cpuStatus">CPU Analysis</a></li>
+                            </ul>
+
+                            <div class="tab-content">
+
+                                <!-- Process Results -->
+                                <div class="tab-pane active" id="pcbStatus">
+                                    <div class="card content">
+                                        <table class="table">
+                                            <thead>
+                                                <tr>
+                                                    <th>PID</th>
+                                                    <th>PC</th>
+                                                    <th>ACC</th>
+                                                    <th>X Register</th>
+                                                    <th>Y Register</th>
+                                                    <th>Z Flag</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>                                        
+                                                <tr>
+                                                    <td colspan="5">
+                                                        <strong>No processes available</strong>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+
+                                <!-- CPU Analysis --> 
+                                <div class="tab-pane" id="cpuStatus">
+                                    <div class="card content">
+                                        <table class="table">
+                                            <thead>
+                                                <tr>
+                                                    <th>PC</th>
+                                                    <th>ACC</th>
+                                                    <th>X Register</th>
+                                                    <th>Y Register</th>
+                                                    <th>Z Flag</th>
+                                                </tr>
+                                                <tr>
+                                                    <td class="pc">0</td>
+                                                    <td class="acc">0</td>
+                                                    <td class="x-register">0</td>
+                                                    <td class="y-register">0</td>
+                                                    <td class="z-flag">0</td>
+                                                </tr>
+                                            </thead>
+                                        </table>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
-                        <div id="pcbStatus">
-                            <label>PCB Status</label>
-                            <div class="card content">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>PID</th>
-                                            <th>PC</th>
-                                            <th>ACC</th>
-                                            <th>X Register</th>
-                                            <th>Y Register</th>
-                                            <th>Z Flag</th>
-                                        </tr>
-                                        <tr>
-                                            <td class="pid">0</td>
-                                            <td class="pc">0</td>
-                                            <td class="acc">0</td>
-                                            <td class="x-register">0</td>
-                                            <td class="y-register">0</td>
-                                            <td class="z-flag">0</td>
-                                        </tr>
-                                    </thead>
-                                </table>
-                            </div>
-                        </div>
 
                         <div id="divUserProgramInput">
                             <label>
@@ -159,5 +166,11 @@
             </p>
         </div>
 
+        <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+        <script type="text/javascript" src="assets/scripts/libs/bootstrap.min.js"></script>
+        <script type="text/javascript" src="assets/scripts/libs/jambOS.all.js"></script>
+
+        <!-- Other Routines -->
+        <!--<script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>-->   
     </body>
 </html>
