Added comments & cleaner way to handle invalid operations on pcbs

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
         <script type="text/javascript" src="assets/scripts/libs/bootstrap.min.js"></script>
-        <script type="text/javascript" src="assets/scripts/libs/jambOS.all.js"></script>
+        <script type="text/javascript" src="assets/scripts/libs/jambOS.all.min.js"></script>
 
         <!-- Other Routines -->
         <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>   
