Removed debug statements & styled process indicator on process results display.

--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
                                                 </tr>
                                             </tbody>
                                         </table>
+
+                                        <div id="processResultsLegend" class="row-fluid">
+                                            <div class="col-md-6 pull-left">
+                                                <span class="successful-op pull-left"></span> Successful
+                                            </div>
+                                            <div class="col-md-6 pull-left">
+                                                <span class="invalid-op pull-left"></span> Invalid
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -127,6 +136,8 @@
                                                     <th>Y Register</th>
                                                     <th>Z Flag</th>
                                                 </tr>
+                                            </thead>
+                                            <tbody>                                                
                                                 <tr>
                                                     <td class="pc">0</td>
                                                     <td class="acc">0</td>
@@ -134,8 +145,17 @@
                                                     <td class="y-register">0</td>
                                                     <td class="z-flag">0</td>
                                                 </tr>
-                                            </thead>
+                                            </tbody>
                                         </table>
+
+                                        <div id="cpuResultsLegend" class="row-fluid">
+                                            <div class="col-md-6 pull-left">
+                                                <span class="successful-op pull-left"></span> Successful
+                                            </div>
+                                            <div class="col-md-6 pull-left">
+                                                <span class="invalid-op pull-left"></span> Invalid
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
