Changed legend key from successful to valid to be consistent with the other key.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                                         <div id="processResultsLegend" class="row-fluid">
                                             <div class="col-md-6 pull-left">
-                                                <span class="successful-op pull-left"></span> Successful
+                                                <span class="successful-op pull-left"></span> Valid
                                             </div>
                                             <div class="col-md-6 pull-left">
                                                 <span class="invalid-op pull-left"></span> Invalid
@@ -150,7 +150,7 @@
 
                                         <div id="cpuResultsLegend" class="row-fluid">
                                             <div class="col-md-6 pull-left">
-                                                <span class="successful-op pull-left"></span> Successful
+                                                <span class="successful-op pull-left"></span> Valid
                                             </div>
                                             <div class="col-md-6 pull-left">
                                                 <span class="invalid-op pull-left"></span> Invalid
