--- a/index.html
+++ b/index.html
@@ -48,17 +48,32 @@
 
                 <div class="row-fluid">
 
-                    <div id="divConsole" style="height:540px; float:left;" class="span6 pull-left">
-                        <div id="taskbar"></div>
+                    <div class="col-md-6 pull-left">
+                        <div id="divConsole">
+                            <div id="taskbar"></div>
+                            <div class="clearfix"></div>
+                            <div class="canvas">
+                                <canvas id="display"
+                                        width="500px"
+                                        height="480px"
+                                        tabindex="3" />
+                            </div>
+                        </div>
+
                         <div class="clearfix"></div>
-                        <div class="canvas">
-                            <canvas id="display"
-                                    width="500px"
-                                    height="480px"
-                                    tabindex="3" />
+
+                        <div id="divUserProgramInput">
+                            <label>
+                                User Program Input
+                            </label>
+                            <br />
+                            <textarea name="taProgramInput"
+                                      id  ="taProgramInput"
+                                      rows="5"
+                                      ></textarea>
                         </div>
                     </div>
-                    <div class="span6 pull-left">
+                    <div class="col-md-6 pull-left">
 
                         <div id="divLog">
                             <label>
@@ -159,18 +174,6 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-
-
-                        <div id="divUserProgramInput">
-                            <label>
-                                User Program Input
-                            </label>
-                            <br />
-                            <textarea name="taProgramInput"
-                                      id  ="taProgramInput"
-                                      rows="5"
-                                      ></textarea>
                         </div>
                     </div>
                 </div>
