Added mountain lion scrollbars on scrollable divs

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
         <script type="text/javascript" src="assets/scripts/libs/bootstrap.min.js"></script>
+        <script type="text/javascript" src="assets/scripts/libs/jquery.lionbars.0.3.js"></script>
         <script type="text/javascript" src="assets/scripts/libs/jambOS.all.min.js"></script>
 
         <!-- Other Routines -->
