Fixed the string output bug also added PCB states - There was a bug where the console printed "{" characters instead of the correct string characters on the system calls - Added status section on process display tab

--- a/index.html
+++ b/index.html
@@ -133,11 +133,12 @@
                                                     <th>X Register</th>
                                                     <th>Y Register</th>
                                                     <th>Z Flag</th>
+                                                    <th>State</th>
                                                 </tr>
                                             </thead>
                                             <tbody>                                        
                                                 <tr>
-                                                    <td colspan="5">
+                                                    <td colspan="6">
                                                         <strong>No processes available</strong>
                                                     </td>
                                                 </tr>
